# Blockchain-Simulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  compile_commands.json  debug  edges  simulator  stats  test  test.c  test.cpp  trace  visualize.py
include/: block.h  blockchain.h  event.h  event_queue.h  peer.h  simulator.h  transaction.h  utilities.h
src/: block.cpp  blockchain.cpp  event_queue.cpp  main.cpp  peer.cpp  simulator.cpp  transaction.cpp
visualization/: stats
